buildscript {
    ext {
        springBootVersion = '2.4.3'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "org.liquibase:liquibase-gradle-plugin:2.0.0"
    }
}
apply plugin: 'org.liquibase.gradle'

allprojects {
    group = 'ru.itis'
    version = '0.1'

    repositories {
        mavenCentral()
        mavenLocal()
    }
}

subprojects {
    apply plugin: 'idea'
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    targetCompatibility = JavaVersion.VERSION_11
    sourceCompatibility = JavaVersion.VERSION_11
    bootJar.archiveFileName = "${project.name}.jar"

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        compileOnly 'org.projectlombok:lombok'
        implementation 'org.postgresql:postgresql:42.3.3'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.apache.commons:commons-lang3'
        implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
        implementation "org.springframework.data:spring-data-commons:2.4.5"
        implementation 'org.hibernate:hibernate-core'
        implementation "org.springdoc:springdoc-openapi-ui:1.6.4"
        implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
    }
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}